--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script defer src="https://analytics.helbling.uk/script.js" data-website-id="4728db26-adcb-42e4-abb8-721144f5967c"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
